@@ -4,16 +4,14 @@ require "administrate/page/table"
 module Administrate
   module Field
     class HasMany < Field::Base
-      def associated_table
-        Administrate::Page::Table.new(associated_dashboard)
-      end
+      DEFAULT_LIMIT = 5
 
       def self.permitted_attribute(attribute)
         { "#{attribute.to_s.singularize}_ids".to_sym => [] }
       end
 
-      def permitted_attribute
-        self.class.permitted_attribute(attribute)
+      def associated_table
+        Administrate::Page::Table.new(associated_dashboard)
       end
 
       def attribute_key
@@ -22,6 +20,18 @@ module Administrate
 
       def candidate_records
         Object.const_get(associated_class_name).all
+      end
+
+      def limit
+        options.fetch(:limit, DEFAULT_LIMIT)
+      end
+
+      def permitted_attribute
+        self.class.permitted_attribute(attribute)
+      end
+
+      def resources
+        data.limit(limit)
       end
 
       private
